# Evolving-Alpha-US

./: .gitignore  Backend-Design.md  CLAUDE.md  DEVELOPMENT-PLAN.md  Evolving-Agent-Design-SoniaKairos.md  PROJECT_STATE.md  README.md  ROADMAP.md  pyproject.toml  后续开发文档.md  自进化游资系统-架构蓝图-v1.0.md
.claude/: settings.json
alpha/: CLAUDE.md  integrity.py  redact.py  settings.py  trace.py
alpha_web/: CLAUDE.md  __init__.py  __main__.py  app.py  data_access.py  drawer.py  prose.py  sample.py  sonia_client.py  workbench_client.py
docs/: PROJECT_STATE.md  ROADMAP.md  blueprint.md
scripts/: calibrate_growth_clock.py  calibrate_stock_clock.py  calibrate_theme_clock.py  capture_broad.py  capture_window.py  daily_loop.py  evolve_from_episodes.py  gen_tcb_lock.py  inspect_episodes.py  lint_doctrine.py  migrate_projects_to_sqlite.py  refine_live.py  reflect_from_tasks.py  render_prompt.py  run_verdict.py  sample_run.py  save_decisions.py  save_evolution.py  scan_tradeable.py  serve_web.py  smoke_alpaca.py  smoke_compare.py  smoke_deepseek_agent.py
seeds/: README.md  doctrine.json  memory.json  skills.json
seeds_v2/: doctrine.json  memory.json  skills.json
sonia/: CLAUDE.md  __main__.py  app.py
tests/: conftest.py  test_agent_prompt_stats.py  test_capture.py  test_compare_real_seeds.py  test_cycle.py  test_decision.py  test_doctrine.py  test_edit_log.py  test_edit_log_rationale.py  test_engine.py  test_errors.py  test_eval_integration.py  test_features_money_effect.py  test_features_sentiment.py  test_fill.py  test_harness_serialize.py  test_memory_item.py  test_parse.py  (+31 more)
(+769 files in other folders)
