[project]
name = "alpha"
version = "0.0.1"
description = "Evolving-Alpha-US — self-evolving US-equities momentum co-pilot (US-0 foundations)"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "pydantic>=2.6",
    "pyarrow>=15",
]

[project.optional-dependencies]
live = ["alpaca-py>=0.30", "pandas-market-calendars>=4.0", "openai>=1.0", "anthropic>=0.40"]
web = ["fastapi>=0.110", "uvicorn>=0.29", "jinja2>=3.1", "python-multipart>=0.0.9", "httpx>=0.27", "pypdf>=4.0"]
sonia = ["fastapi>=0.110", "uvicorn>=0.29", "openai>=1.0"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["alpha*", "alpha_web*", "sonia*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
